--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -82,7 +82,7 @@
           <AfterMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>c:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin Objects\S8-57.axf --output S8-57.bin</UserProg1Name>
+            <UserProg1Name>c:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin Objects-Debug\S8-57.axf --output S8-57.bin</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
