--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -15,9 +15,9 @@ if (COMMAND cmake_policy)
 endif ()
 
 # Set project name
-project (S8-57)
+project (S8-57M)
 
-set (TARGET_NAME S8-57)
+set (TARGET_NAME S8-57M)
 
 add_subdirectory(Device)
 add_subdirectory(DLoader)
