--- a/sources/Device/CMakeLists.txt
+++ b/sources/Device/CMakeLists.txt
@@ -33,6 +33,7 @@ add_compile_options(/wd5039)    # 'xxx': pointer or reference to potentially thr
 add_compile_options(/wd5045)    # Compiler will insert Spectre mitigation for memory load if /Qspectre switch specified
 add_compile_options(/wd5219)    # implicit conversion from 'xxx' to 'float', possible loss of data
 add_compile_options(/wd5220)    # a non-static data member with a volatile qualified type no longer implies
+add_compile_options(/wd5264)    # 'xxx': 'const' variable is not used
 
 file(GLOB LIBS_FATFS    ../common/libs/STM32Cube_F4/Middlewares/Third_Party/FatFs/src/ff.*
                         ../common/libs/STM32Cube_F4/Middlewares/Third_Party/FatFs/src/diskio.*
