удалены предупреждения vs_keil

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -19,6 +19,8 @@ project (S8-57M)
 
 set (TARGET_NAME S8-57M)
 
+set(CMAKE_UNITY_BUILD ON)
+
 add_subdirectory(Device)
 add_subdirectory(DLoader)
 add_subdirectory(Panel)
