--- a/sources/Device/CMakeLists.txt
+++ b/sources/Device/CMakeLists.txt
@@ -156,7 +156,6 @@ file(GLOB MENU_PAGES_PAGEMEMORY            src/Menu/Pages/PageMemory/*)
 file(GLOB MENU_PAGES_PAGESERVICE           src/Menu/Pages/PageService/*.h src/Menu/Pages/PageService/*.cpp)
 file(GLOB MENU_PAGES_PAGESERVICE_PAGEDEBUG src/Menu/Pages/PageService/PageDebug/*)
 file(GLOB MENU_PAGES_PAGETRIG              src/Menu/Pages/PageTrig/*)
-file(GLOB MULTIMETER                       src/Multimeter/*)
 file(GLOB _OSCI                            src/Osci/*.h src/Osci/*.cpp)
 file(GLOB OSCI_DISPLAY                     src/Osci/Display/*)
 file(GLOB OSCI_MATH                        src/Osci/Math/*)
@@ -165,7 +164,6 @@ file(GLOB RECORDER                         src/Recorder/*)
 file(GLOB _SCPI                            src/SCPI/*)
 file(GLOB SETTINGS                         src/Settings/*)
 file(GLOB TEST                             src/Test/*)
-file(GLOB TESTER                           src/Tester/*)
 file(GLOB UTILS                            src/Utils/*)
 
 set_source_files_properties(${LIBS_FATFS} ${LIBS_HAL} ${LIBS_USBD} ${LIBS_USBH} PROPERTIES HEADER_FILE_ONLY TRUE)
@@ -203,7 +201,6 @@ source_group(Menu\\Pages\\PageMemory             FILES ${MENU_PAGES_PAGEMEMORY})
 source_group(Menu\\Pages\\PageService            FILES ${MENU_PAGES_PAGESERVICE})
 source_group(Menu\\Pages\\PageService\\PageDebug FILES ${MENU_PAGES_PAGESERVICE_PAGEDEBUG})
 source_group(Menu\\Pages\\PageTrig               FILES ${MENU_PAGES_PAGETRIG})
-source_group(Multimeter                          FILES ${MULTIMETER})
 source_group(Osci                                FILES ${_OSCI})
 source_group(Osci\\Display                       FILES ${OSCI_DISPLAY})
 source_group(Osci\\Math                          FILES ${OSCI_MATH})
@@ -212,7 +209,6 @@ source_group(Recorder                            FILES ${RECORDER})
 source_group(SCPI                                FILES ${_SCPI})
 source_group(Settings                            FILES ${SETTINGS})
 source_group(Test                                FILES ${TEST})
-source_group(Tester                              FILES ${TESTER})
 source_group(Utils                               FILES ${UTILS})
 
 add_library(Device ${COMMON} ${DOC} ${VS} ${VS_STD_INCLUDES} ${SRC} ${DISPLAY} ${DISPLAY_FONT} ${FLASHDRIVE} ${_FPGA}
@@ -221,6 +217,6 @@ add_library(Device ${COMMON} ${DOC} ${VS} ${VS_STD_INCLUDES} ${SRC} ${DISPLAY} $
                    ${LIBS_USBH} ${KEYBOARD} ${MENU} ${MENU_PAGES} ${MENU_PAGES_INCLUDE} ${MENU_PAGES_PAGEDISPLAY}
                    ${MENU_PAGES_PAGEFUNCTION} ${MENU_PAGES_PAGERECORDER} ${MENU_PAGES_PAGEHELP}
                    ${MENU_PAGES_PAGEMEASURES} ${MENU_PAGES_PAGEMEMORY}
-                   ${MENU_PAGES_PAGESERVICE} ${MENU_PAGES_PAGESERVICE_PAGEDEBUG} ${MENU_PAGES_PAGETRIG} ${MULTIMETER}
+                   ${MENU_PAGES_PAGESERVICE} ${MENU_PAGES_PAGESERVICE_PAGEDEBUG} ${MENU_PAGES_PAGETRIG}
                    ${_OSCI} ${OSCI_DISPLAY} ${OSCI_MATH}
-                   ${OSCI_MEASUREMENTS} ${RECORDER} ${_SCPI} ${SETTINGS} ${TEST} ${TESTER} ${UTILS})
+                   ${OSCI_MEASUREMENTS} ${RECORDER} ${_SCPI} ${SETTINGS} ${TEST} ${UTILS})
