--- a/sources/Panel/Panel.uvprojx
+++ b/sources/Panel/Panel.uvprojx
@@ -1305,6 +1305,16 @@
               <FileType>5</FileType>
               <FilePath>.\src\structs.h</FilePath>
             </File>
+            <File>
+              <FileName>UnusedMemory.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\UnusedMemory.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>UnusedMemory.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\UnusedMemory.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
