--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -1210,16 +1210,6 @@
               <FilePath>.\src\defines.cpp</FilePath>
             </File>
             <File>
-              <FileName>device.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\device.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>device.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\device.h</FilePath>
-            </File>
-            <File>
               <FileName>globals.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\globals.h</FilePath>
@@ -1263,6 +1253,16 @@
               <FileName>tables.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\tables.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Device.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Device.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -3617,16 +3617,6 @@
               <FilePath>.\src\defines.cpp</FilePath>
             </File>
             <File>
-              <FileName>device.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\device.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>device.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\device.h</FilePath>
-            </File>
-            <File>
               <FileName>globals.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\globals.h</FilePath>
@@ -3670,6 +3660,16 @@
               <FileName>tables.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\tables.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Device.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Device.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Device.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Device.h</FilePath>
             </File>
           </Files>
         </Group>
