--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -2414,7 +2414,7 @@
       </Groups>
     </Target>
     <Target>
-      <TargetName>Releas</TargetName>
+      <TargetName>Release</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
       <pCCUsed>5060960::V5.06 update 7 (build 960)::.\ARMCC</pCCUsed>
