--- a/sources/Panel/CMakeLists.txt
+++ b/sources/Panel/CMakeLists.txt
@@ -34,6 +34,7 @@ file(GLOB COMMON          ../common/Command.h
 file(GLOB SRC             src/*.h src/*.cpp)
 file(GLOB DISPLAY         src/Display/*.h src/Display/*.cpp)
 file(GLOB DISPLAY_FONT    src/Display/Font/*)
+file(GLOB DISPLAY_TEXT    src/Display/Text/*)
 file(GLOB HARDWARE        src/Hardware/*.h src/Hardware/*.cpp)
 file(GLOB HARDWARE_CMSIS  src/Hardware/CMSIS/*)
 file(GLOB HARDWARE_HAL    src/Hardware/HAL/*)
@@ -46,20 +47,23 @@ file(GLOB VS_CMSIS        ../common/_VS/CMSIS/*)
 
 set_source_files_properties(${LIBS_HAL} PROPERTIES HEADER_FILE_ONLY TRUE)
 
-source_group(libs\\HAL         FILES ${LIBS_HAL})
-source_group(common            FILES ${COMMON})
-source_group(src               FILES ${SRC})
-source_group(Display           FILES ${DISPLAY})
-source_group(Display\\Font     FILES ${DISPLAY_FONT})
-source_group(Hardware          FILES ${HARDWARE})
-source_group(Hardware\\CMSIS   FILES ${HARDWARE_CMSIS})
-source_group(Hardware\\HAL     FILES ${HARDWARE_HAL})
-source_group(Hardware\\stm32   FILES ${HARDWARE_STM32})
-source_group(Settings          FILES ${SETTINGS})
-source_group(Utils             FILES ${UTILS})
-source_group(_VS               FILES ${VS})
-source_group(_VS\\std_includes FILES ${VS_STD_INCLUDES})
-source_group(_VS\\CMSIS        FILES ${VS_CMSIS})
+source_group(libs/HAL         FILES ${LIBS_HAL})
+source_group(common           FILES ${COMMON})
+source_group(src              FILES ${SRC})
+source_group(Display          FILES ${DISPLAY})
+source_group(Display/Font     FILES ${DISPLAY_FONT})
+source_group(Display/Text     FILES ${DISPLAY_TEXT})
+source_group(Hardware         FILES ${HARDWARE})
+source_group(Hardware/CMSIS   FILES ${HARDWARE_CMSIS})
+source_group(Hardware/HAL     FILES ${HARDWARE_HAL})
+source_group(Hardware/stm32   FILES ${HARDWARE_STM32})
+source_group(Settings         FILES ${SETTINGS})
+source_group(Utils            FILES ${UTILS})
+source_group(_VS              FILES ${VS})
+source_group(_VS/std_includes FILES ${VS_STD_INCLUDES})
+source_group(_VS/CMSIS        FILES ${VS_CMSIS})
 
-add_library(Panel ${LIBS_HAL} ${COMMON} ${SRC} ${DISPLAY} ${DISPLAY_FONT} ${HARDWARE} ${HARDWARE_CMSIS} ${HARDWARE_HAL}
+add_library(Panel ${LIBS_HAL} ${COMMON} ${SRC}
+                  ${DISPLAY} ${DISPLAY_FONT} ${DISPLAY_TEXT}
+                  ${HARDWARE} ${HARDWARE_CMSIS} ${HARDWARE_HAL}
                   ${HARDWARE_STM32}  ${SETTINGS} ${UTILS} ${VS} ${VS_STD_INCLUDES} ${VS_CMSIS})
