реализовано сохранение/загрузка настроек

--- a/sources/DLoader/CMakeLists.txt
+++ b/sources/DLoader/CMakeLists.txt
@@ -1,6 +1,7 @@
+# (c) Aleksandr Shevchenko e-mail : Sasha7b9@tut.by
 project (DLoader)
 
-#set(CMAKE_UNITY_BUILD OFF)
+set(CMAKE_UNITY_BUILD OFF)
 
 include_directories(../common/libs/STM32Cube_F4/Drivers/STM32F4xx_HAL_Driver/Inc
                     ../common/libs/STM32Cube_F4/Drivers/CMSIS/Device/ST/STM32F4xx/Include
