Пробуем переходить на новый шрифт

--- a/sources/fonts/MatrixFont/bin/settings.ini
+++ b/sources/fonts/MatrixFont/bin/settings.ini
@@ -5,7 +5,7 @@ WindowMainLeft=540
 WindowMainWidth=600
 WindowMainHeight=420
 WindowMainState=2
-Splitter=170
+Splitter=231
 Grid=1
 Rollover=1
 OnTop=0
@@ -13,7 +13,7 @@ Preview=0
 CodeFontSize=17
 
 [Last Opened Files]
-File_0=
+File_0=D:\Projects\S8-57M\sources\fonts\Font8.RHF
 File_1=
 File_2=
 File_3=
@@ -23,6 +23,11 @@ File_6=
 File_7=
 File_8=
 File_9=
+acViewTBCommon_Checked=1
+acViewTBEffectsChar_Checked=1
+acViewTBEffectsFont_Checked=1
+acViewTBEditChar_Checked=1
+acViewTBEditFont_Checked=1
 
 [TApplication.fmMain]
 acViewTBCommon_Checked=1
